--- a/05.PathVaraible.md
+++ b/05.PathVaraible.md
@@ -81,6 +81,57 @@ UserByID :kido, key: height
 UserByID :kido, key: region
 ```
 
+## Regular Expression 적용하기. 
+
+PathVariable 를 특정 조건에 부합하는 값만을 받기위해 Regular Express 을 이용할 수 있다. 
+
+사용자 아이디가 숫자로만 이루어 진 값이라고 해보자. 그럼 다음과 같은 URI 를 작성할 수 있다. 
+
+- /api/users/{id:[0-9]+} 
+
+위와 같이 적용하면 users/ 다음에 오는 값은 오직 숫자로만 구성된 값이 올 수 있다는 의미이다. 
+
+그럼 api_users.go 를 다음과 같이 수정해보자. 
+
+```
+... 생략 
+func usersHandlers() []handler {
+	return []handler{
+		{path: "/users/{id}/summary/{key}", fun: GetUserSummaryByKey, methods: []string{"GET"}},
+
+		// 이 부분에서 regular expression 을 적용했다. 
+		{path: "/users/{id:[0-9]+}", fun: UserByID, methods: []string{"GET"}},
+		{path: "/users/{id}", fun: DeleteUserByID, methods: []string{"DELETE"}},
+		{path: "/users", fun: CreateUser, methods: []string{"POST"}},
+		{path: "/users", fun: AllUsers, methods: []string{"GET"}},
+		{path: "/users", fun: UpdateUser, methods: []string{"PUT"}},
+	}
+}
+... 생략 
+```
+
+- path: "/users/{id:[0-9]+}": 이 의미는 /users/숫자 인 경로가 들어오면 UserByID 핸들러로 라우팅 하라는 의미이다. 
+
+만약 /users/hello123 등과 같은 값이 들어온다면 아마도 /users 이고 GET 인 AllUsers 핸들러로 라우팅 될 것이다. 
+
+위와 같이 작성하고 테스트를 해보자. 
+
+## 테스트하기. 
+
+```
+✗ curl http://localhost:8080/api/users/123
+UserByID :123
+```
+
+정상적으로 숫자가 들어왔고, 원하는 값이 반환 되었다. 
+
+```
+✗ curl http://localhost:8080/api/users/hello111
+AllUsers
+```
+
+숫자에 매치되는 라우팅은 건너 뛰고, AllUsers 핸들러를 호출한 것을 확인할 수 있다. 
+
 ## Wrap Up
 
 PathVariable 을 이용하면 의미있는 REST Api 를 작성할 수 있다. REST Endpoint 작성 가이드에 따라, 활용하면 좋을듯 하다. 
